docs: convert tables to MDX, add more reference docs

--- a/src/pages/reference-js/clerk/session-methods.mdx
+++ b/src/pages/reference-js/clerk/session-methods.mdx
@@ -27,18 +27,43 @@ If an active session already exists, it will be replaced with the new one. The c
 2. The **beforeEmit** callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
 3. The current `Session` is set to the passed **session**. This causes the control components to render their children again.
 
-**Parameters**
+### Props
 
-| Name        | Type                                                       | Description                                                  |
-| ----------- | ---------------------------------------------------------- | ------------------------------------------------------------ |
-| session     | Session \| string \| null                          | A `Session` object or `Session ID` string to be set as the current session, or **null** to simply remove the active session, without setting a new one. |
-| beforeEmit? | (session: Session \| null) => Promise{"<any>"} \| void | Callback that will trigger when the current session is set to **undefined**, before finally being set to the passed session. Usually used for navigation. |
 
-**Returns**
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>session</code>,
+  <code>Session | string | null</code>,
+  <>A <code>Session</code> object or <code>Session ID</code> string to be set as the current session, or <strong>null</strong> to simply remove the active session, without setting a new one.</>,
+  ],
+  },
+    {
+  cells: [
+  <code>beforeEmit?</code>,
+  <code>(session: Session | null) {"=>"} Promise{"<any>"}</code>,
+  <>Callback that will trigger when the current session is set to <strong>undefined</strong>, before finally being set to the passed session. Usually used for navigation.</>,
+  ],
+  }
+  ]}
+/>
 
-| Type          | Description                                                  |
-| ------------- | ------------------------------------------------------------ |
-| {"Promise<void>"} | This method returns a `Promise` which doesn't resolve to any value. The `Promise` will resolve after the passed `session` is set. |
+
+### Returns
+
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>{"Promise<void>"}</code>,
+  <>The <code>Promise</code> will resolve after the passed <code>session</code> is set.</>,
+  ]},
+  ]}
+/>
 
 
 ## `setActive()`
@@ -51,7 +76,52 @@ function setActive({
 }: SetActiveParams): Promise<void>;
 ```
 
-`setActive` can be used to set the active session and/or organization.
-It will eventually replace `setSession`.
+An **experimental** method used to set the active session and/or organization.
 
-@experimental
+> This method will eventually replace `setSession`.
+
+### `SetActiveParams`
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>session</code>,
+  <code>Session | string | null</code>,
+  <>The session resource or session id (string version) to be set as active. If <code>null</code>, the current session is deleted.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>organization</code>,
+  <code><a href="/reference-js/organization/organization">Organization</a> | string | null</code>,
+  <>The organization resource or organization id (string version) to be set as active in the current session. If <code>null</code>, the currently active organization is removed as active.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>beforeEmit</code>,
+  <code>(session?: Session | null) {"=> void | Promise<any>"}</code>,
+  <>Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions.</>,
+  ],
+  },
+  
+  ]}
+/>
+
+
+### Returns
+
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>{"Promise<void>"}</code>,
+  <>The <code>Promise</code> will resolve after the passed <code>session</code> or <code>organization</code> is set.</>,
+  ]},
+  ]}
+/>
