docs: migrate all tables to use MDX tables

--- a/src/pages/reference-js/session.mdx
+++ b/src/pages/reference-js/session.mdx
@@ -17,22 +17,27 @@ All sessions that are **expired**, **removed**, **replaced**, **ended** or **aba
 
 > For more details regarding the different session states, see our documentation on [Session management](https://clerk.com/docs/request-authentication/validate-session-tokens).
 
-## Attributes
 
-| Name           | Type           | Description                                                  |
-| -------------- | -------------- | ------------------------------------------------------------ |
-| id             | string         | A unique identifier for the session.                         |
-| user           | User           | The user associated with the session.                        |
-| publicUserData | PublicUserData | Public information about the user that this session belongs to. |
-| status         | SessionStatus  | The current state of the session.                            |
-| lastActiveAt   | Date           | The time the session was last active on the Client.          |
-| abandonAt      | Date           | The time when the session was abandoned by the user.         |
-| expireAt       | Date           | The time the session expires and will seize to be active.    |
-| updatedAt      | Date           | The last time the session recorded activity of any kind.     |
-| createdAt | Date | The time the session was created. |
-| lastActiveToken | TokenResource \| null | The last active token for the session |
-| lastActiveOrganizationId | string \| null | The last active organization identifier |
-| actor | ActJWTClaim \| null | The JWT actor for the session |
+## Properties
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>id</code>, <code>string</code>, <>A unique identifier for the session.</>]},
+{cells: [<code>user</code>, <code>User</code>, <>The user associated with the session.</>]},
+{cells: [<code>publicUserData</code>, <code>PublicUserData</code>, <>Public information about the user that this session belongs to.</>]},
+{cells: [<code>status</code>, <code>SessionStatus</code>, <>The current state of the session.</>]},
+{cells: [<code>lastActiveAt</code>, <code>Date</code>, <>The time the session was last active on the Client.</>]},
+{cells: [<code>abandonAt</code>, <code>Date</code>, <>The time when the session was abandoned by the user.</>]},
+{cells: [<code>expireAt</code>, <code>Date</code>, <>The time the session expires and will seize to be active.</>]},
+{cells: [<code>updatedAt</code>, <code>Date</code>, <>The last time the session recorded activity of any kind.</>]},
+{cells: [<code>createdAt</code>, <code>Date</code>, <>The time the session was created.</>]},
+{cells: [<code>lastActiveToken</code>, <code>TokenResource | null</code>, <>The last active token for the session</>]},
+{cells: [<code>lastActiveOrganizationId</code>, <code>string | null</code>, <>The last active organization identifier </>]},
+{cells: [<code>actor</code>, <code>ActJWTClaim | null</code>, <>The JWT actor for the session </>]},
+  ]}
+/>
 
 ## Methods
 
@@ -72,23 +77,33 @@ Retrieves the user's session token for the given template or the default clerk t
 
 ### GetSessionTokenOptions
 
-| Name            | Type    | Description                                                  |
-| --------------- | ------- | ------------------------------------------------------------ |
-| leewayInSeconds | number  | The number of seconds that we allow the token to be cached.  |
-| template?       | string  | The name of the JWT template to generate a new token from.   |
-| throwOnError?   | boolean | Whether to throw an error or return an empty string, if an error occurs. |
-| skipCache?      | boolean | Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields). (default: false) |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>leewayInSeconds</code>, <code>number</code>, <>The number of seconds that we allow the token to be cached.</>]},
+{cells: [<code>template?</code>, <code>string</code>, <>The name of the JWT template to generate a new token from.</>]},
+{cells: [<code>throwOnError?</code>, <code>boolean</code>, <>Whether to throw an error or return an empty string, if an error occurs.</>]},
+{cells: [<code>skipCache?</code>, <code>boolean</code>, <>Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields). (default: false)</>]},
+  ]}
+/>
+
 
 ## Types
 
 ### PublicUserData
 
-| Name            | Type           | Description                                                  |
-| --------------- | -------------- | ------------------------------------------------------------ |
-| firstName       | string \| null | The user's first name. This attribute will only be populated if name is enabled in instance settings. |
-| lastName?       | string \| null | The user's last name. This attribute will only be populated if name is enabled in instance settings. |
-| profileImageUrl | string         | The URL of the user's profile image.                         |
-| identifier      | string         | The user's identifier (email address, phone number, username, etc) that was used for authentication when this session was created. |
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>firstName</code>, <code>string | null</code>, <>The user's first name. This attribute will only be populated if name is enabled in instance settings.</>]},
+{cells: [<code>lastName?</code>, <code>string | null</code>, <>The user's last name. This attribute will only be populated if name is enabled in instance settings.</>]},
+{cells: [<code>profileImageUrl</code>, <code>string</code>, <>The URL of the user's profile image.</>]},
+{cells: [<code>identifier</code>, <code>string</code>, <>The user's identifier (email address, phone number, username, etc) that was used for authentication when this session was created.</>]},
+  ]}
+/>
 
 ### SessionStatus
 
@@ -96,12 +111,15 @@ Retrieves the user's session token for the given template or the default clerk t
 type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | "replaced" | "revoked";
 ```
 
-| Value     | Description                                                  |
-| --------- | ------------------------------------------------------------ |
-| abandoned | The session was abandoned client-side.                       |
-| active    | The session is valid and all activity is allowed.            |
-| ended     | The user signed out of the session, but the `Session` remains in the Client object. |
-| expired   | The period of allowed activity for this session has passed.  |
-| removed   | The user signed out of the session and the `Session` was removed from the Client object. |
-| replaced  | The session has been replaced by another one, but the `Session` remains in the Client object. |
-| revoked   | he application ended the session and the `Session` was removed from the Client object. |
+
+<Tables
+  headings={["Value", "Description"]}
+  rows={[
+{cells: [<code>abandoned</code>, <>The session was abandoned client-side.</>]},
+{cells: [<code>active</code>, <>The session is valid and all activity is allowed.</>]},
+{cells: [<code>ended</code>, <>The user signed out of the session, but the `Session` remains in the Client object.</>]},
+{cells: [<code>expired</code>, <>The period of allowed activity for this session has passed.</>]},
+{cells: [<code>removed</code>, <>The user signed out of the session and the `Session` was removed from the Client object.</>]},
+{cells: [<code>replaced</code>, <>The session has been replaced by another one, but the `Session` remains in the Client object.</>]},
+{cells: [<code>revoked</code>, <>he application ended the session and the `Session` was removed from the Client object.</>]},  ]}
+/>
