docs: finish documenting the session class

--- a/src/pages/reference-js/session.mdx
+++ b/src/pages/reference-js/session.mdx
@@ -26,8 +26,8 @@ All sessions that are **expired**, **removed**, **replaced**, **ended** or **aba
   rows={[
 {cells: [<code>id</code>, <code>string</code>, <>A unique identifier for the session.</>]},
 {cells: [<code>user</code>, <code>User</code>, <>The user associated with the session.</>]},
-{cells: [<code>publicUserData</code>, <code>PublicUserData</code>, <>Public information about the user that this session belongs to.</>]},
-{cells: [<code>status</code>, <code>SessionStatus</code>, <>The current state of the session.</>]},
+{cells: [<code>publicUserData</code>, <code><a href="#publicuserdata">PublicUserData</a></code>, <>Public information about the user that this session belongs to.</>]},
+{cells: [<code>status</code>, <code><a href="#sessionstatus">SessionStatus</a></code>, <>The current state of the session.</>]},
 {cells: [<code>lastActiveAt</code>, <code>Date</code>, <>The time the session was last active on the Client.</>]},
 {cells: [<code>abandonAt</code>, <code>Date</code>, <>The time when the session was abandoned by the user.</>]},
 {cells: [<code>expireAt</code>, <code>Date</code>, <>The time the session expires and will seize to be active.</>]},
@@ -49,6 +49,15 @@ function end(): Promise<Session>;
 
 Marks the session as ended. The session will no longer be active for this Client and its status will become **ended**.
 
+#### Returns
+
+<Tables
+  headings={["Type", "Description"]}
+  rows={[
+  {cells: [ <code>Promise{"<"}<a href="/reference-js/session">Session</a>{">"}</code>, <>The session that was just ended.</>]},
+  ]}
+/>
+
 ### `remove()`
 
 ```typescript
@@ -56,6 +65,15 @@ function remove(): Promise<Session>;
 ```
 
 Marks the session as removed. The session will no longer be active for this Client and its status will become **removed**.
+
+#### Returns
+
+<Tables
+  headings={["Type", "Description"]}
+  rows={[
+  {cells: [ <code>Promise{"<"}<a href="/reference-js/session">Session</a>{">"}</code>, <>The session that was just removed.</>]},
+  ]}
+/>
 
 ### `touch()`
 
@@ -65,6 +83,17 @@ function touch(): Promise<Session>;
 
 Touches the session, signifying some kind of user activity. Use this method to record any updates to user activity.
 
+
+#### Returns
+
+<Tables
+  headings={["Type", "Description"]}
+  rows={[
+  {cells: [ <code>Promise{"<"}<a href="/reference-js/session">Session</a>{">"}</code>, <>The session that was just touched.</>]},
+  ]}
+/>
+
+
 ### `getToken()`
 
 ```typescript
@@ -73,9 +102,7 @@ function getToken(options?: GetTokenOptions): Promise<string | null>;
 
 Retrieves the user's session token for the given template or the default clerk token. This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for clerk token is one minute.
 
-#### `GetTokenOptions`
-
-### GetSessionTokenOptions
+#### GetTokenOptions
 
 <Tables
   headings={["Name", "Type", "Description"]}
@@ -85,6 +112,16 @@ Retrieves the user's session token for the given template or the default clerk t
 {cells: [<code>template?</code>, <code>string</code>, <>The name of the JWT template to generate a new token from.</>]},
 {cells: [<code>throwOnError?</code>, <code>boolean</code>, <>Whether to throw an error or return an empty string, if an error occurs.</>]},
 {cells: [<code>skipCache?</code>, <code>boolean</code>, <>Whether to skip the cache lookup and force a call to the server instead, even within the TTL. Useful if the token claims are time-sensitive or depend on data that can be updated (e.g. user fields). (default: false)</>]},
+  ]}
+/>
+
+
+#### Returns
+
+<Tables
+  headings={["Type", "Description"]}
+  rows={[
+  {cells: [ <code>Promise{"<string | null>"}</code>, <>The requested token.</>]},
   ]}
 />
 
