chore: deep link to new session doc

--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -21,7 +21,7 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
   {cells: [ <code>proxyUrl</code>, <code>string</code>, <>A getter for your Clerk app's proxy URL. Required for applications that run behind a reverse proxy.<br/>Can be either a relative path (<code>/__clerk</code>) or a full URL (<code>{"https://<your-domain>/__clerk"}</code>).</>]},
   {cells: [ <code>instanceType</code>, <code>'production' | 'development'</code>, "A getter to see the if a Clerk instance is running in production or development mode"]},
   {cells: [ <code>client</code>, <code><a href="#">Client</a></code>, <>The <code>Client</code> object for the current window.</>]},
-  {cells: [ <code>session</code>, <code><a href="#">Session</a> | null | undefined</code>, <>The currently active <code>Session</code>, which is guaranteed to be one of the sessions in <code>Client.sessions</code>. If there is no active session, this field will be <code>null</code>. If the session is loading, this field will be <code>undefined</code>.</>]},
+  {cells: [ <code>session</code>, <code><a href="#">Session</a> | null | undefined</code>, <>The currently active <code><a href="/reference-js/session">Session</a></code>, which is guaranteed to be one of the sessions in <code>Client.sessions</code>. If there is no active session, this field will be <code>null</code>. If the session is loading, this field will be <code>undefined</code>.</>]},
   {cells: [ <code>user</code>, <code><a href="#">User</a> | null | undefined</code>, <>A shortcut to <code>Session.user</code> which holds the currently active <code>User</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
   {cells: [ <code>organization</code>, <code><a href="/reference-js/organization/organization">Organization</a> | null | undefined</code>, <>A shortcut to the last active <code>Session.user.organizationMemberships</code> which holds an instance of a <code>Organization</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
   ]}
