--- a/src/pages/reference-js/clerk/session-methods.mdx
+++ b/src/pages/reference-js/clerk/session-methods.mdx
@@ -17,15 +17,15 @@ function setSession(
 ): Promise<void>;
 ```
 
-Set the current session on this client to the provided session. The provided session can be either a complete Session object or simply its unique identifier.
+Set the current session on this client to the provided session. The provided session can be either a complete <a href="/reference-js/session">Session</a> object or simply its unique identifier.
 
 Passing null as the session will result in the current session to be removed from the client.
 
 If an active session already exists, it will be replaced with the new one. The change happens in three steps:
 
-1. The current `Session` object is set to **undefined**, which causes the control components to stop rendering their children as though Clerk is still initializing.
+1. The current <a href="/reference-js/session">`Session`</a> object is set to **undefined**, which causes the control components to stop rendering their children as though Clerk is still initializing.
 2. The **beforeEmit** callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
-3. The current `Session` is set to the passed **session**. This causes the control components to render their children again.
+3. The current <a href="/reference-js/session">`Session`</a> is set to the passed **session**. This causes the control components to render their children again.
 
 ### Props
 
@@ -37,14 +37,14 @@ If an active session already exists, it will be replaced with the new one. The c
   {
   cells: [
   <code>session</code>,
-  <code>Session | string | null</code>,
-  <>A <code>Session</code> object or <code>Session ID</code> string to be set as the current session, or <strong>null</strong> to simply remove the active session, without setting a new one.</>,
+  <code><a href="/reference-js/session">Session</a> | string | null</code>,
+  <>A <code><a href="/reference-js/session">Session</a></code> object or <code>Session ID</code> string to be set as the current session, or <strong>null</strong> to simply remove the active session, without setting a new one.</>,
   ],
   },
     {
   cells: [
   <code>beforeEmit?</code>,
-  <code>(session: Session | null) {"=>"} Promise{"<any>"}</code>,
+  <code>(session: <a href="/reference-js/session">Session</a> | null) {"=>"} Promise{"<any>"}</code>,
   <>Callback that will trigger when the current session is set to <strong>undefined</strong>, before finally being set to the passed session. Usually used for navigation.</>,
   ],
   }
@@ -104,7 +104,7 @@ An **experimental** method used to set the active session and/or organization.
   {
   cells: [
   <code>beforeEmit</code>,
-  <code>(session?: Session | null) {"=> void | Promise<any>"}</code>,
+  <code>(session?: <a href="/reference-js/session">Session</a> | null) {"=> void | Promise<any>"}</code>,
   <>Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions.</>,
   ],
   },
