--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -16,7 +16,7 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
   rows={[
   {cells: [ <code>version</code>, <code>string</code>, "A getter for the Clerk SDK version"]},
   {cells: [ <code>loaded</code>, <code>boolean</code>, <>A getter to see if the <code>Clerk</code> object is ready for use or not</>]},
-  // {cells: [ <code>isSatellite</code>, <code>boolean</code>, "A experimental getter for "]},
+  {cells: [ <code>isSatellite</code>, <code>boolean</code>, "Clerk Flag for satellite apps."]},
   {cells: [ <code>domain</code>, <code>string</code>, <>A getter for the current Clerk app's domain.<br/>Prefixed with <code>clerk.</code> on production if not already prefixed<br/>Returns <code>""</code> when ran on the server</>]},
   {cells: [ <code>proxyUrl</code>, <code>string</code>, <>A getter for your Clerk app's proxy URL. Required for applications that run behind a reverse proxy.<br/>Can be either a relative path (<code>/__clerk</code>) or a full URL (<code>{"https://<your-domain>/__clerk"}</code>).</>]},
   {cells: [ <code>instanceType</code>, <code>'production' | 'development'</code>, "A getter to see the if a Clerk instance is running in production or development mode"]},
@@ -24,8 +24,132 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
   {cells: [ <code>session</code>, <code><a href="#">Session</a> | null | undefined</code>, <>The currently active <code><a href="/reference-js/session">Session</a></code>, which is guaranteed to be one of the sessions in <code>Client.sessions</code>. If there is no active session, this field will be <code>null</code>. If the session is loading, this field will be <code>undefined</code>.</>]},
   {cells: [ <code>user</code>, <code><a href="#">User</a> | null | undefined</code>, <>A shortcut to <code>Session.user</code> which holds the currently active <code>User</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
   {cells: [ <code>organization</code>, <code><a href="/reference-js/organization/organization">Organization</a> | null | undefined</code>, <>A shortcut to the last active <code>Session.user.organizationMemberships</code> which holds an instance of a <code>Organization</code> object. If the session is <code>null</code> or <code>undefined</code>, the user field will match.</>]},
+  {cells: [ <code>frontendApi</code>, <code>string</code>, <>Clerk Frontend API string. <strong>This field is deprecated, use <code>publishableKey</code> instead.</strong></>]},
+  {cells: [ <code>publishableKey</code>, <code>string | undefined</code>, <>Clerk Publishable Key string.</>]},
   ]}
 />
+
+## Methods
+
+### `constructor()`
+
+```typescript
+class Clerk {
+  constructor(key: string, options?: DomainOrProxyUrl);
+}
+```
+
+Create an instance of the Clerk class with dedicated options.
+
+> This method is only available when importing Clerk from `@clerk/clerk-js`, rather than using a Window script.
+
+#### Props
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>key</code>,
+  <code>string</code>,
+  <>The publishable key from your Clerk Dashboard, used to connect to Clerk</>,
+  ],
+  },
+  {
+  cells: [
+  <code>options</code>,
+  <code><a href="#domainorproxyurl">DomainOrProxyUrl</a> | undefined</code>,
+  <>The domain or proxy URL used to connect to Clerk</>,
+  ],
+  },
+  ]}
+/>
+
+#### `DomainOrProxyUrl`
+
+Only one of the two properties are allowed to be set at a time.
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>proxyUrl</code>,
+  <code>{"never | string | ((url: URL) => string)"}</code>,
+  <>The proxyUrl used to connect to Clerk. If a function, will be called with a <code>URL</code> made from <code>window.location.href</code></>,
+  ],
+  },
+  {
+  cells: [
+  <code>domain</code>,
+  <code>{"never | string | ((url: URL) => string)"}</code>,
+  <>The domain used to connect to Clerk. If a function, will be called with a <code>URL</code> made from <code>window.location.href</code></>,
+  ],
+  },
+  ]}
+/>
+
+
+### `isReady()`
+
+```typescript
+function isReady(): boolean;
+```
+
+Returns **true** when the [ClerkJS](https://clerk.com/docs/reference/clerk-react/installation) library has fully loaded and the `Clerk` object is ready for use, **false** otherwise.
+
+#### Returns
+
+
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [
+  <code>{"boolean"}</code>,
+  <>This method will return <strong>true</strong> when the Clerk object is ready, <strong>false</strong> otherwise.</>,
+  ]},
+  ]}
+/>
+
+
+
+### `load()`
+
+```typescript
+function load(options?: ClerkOptions): Promise<void>;
+```
+
+
+### `signOut()`
+
+```typescript
+function signOut(options?: SignOutOptions): Promise<void>;
+// OR
+function signOut(signOutCallback?: SignOutCallback, options?: SignOutOptions): Promise<void>;
+```
+
+
+### `addListener()`
+
+```typescript
+function addListener(listener: ListenerCallback): UnsubscribeCallback;
+```
+
+
+### `authenticateWithMetamask()`
+
+```typescript
+function authenticateWithMetamask({
+  redirectUrl,
+  signUpContinueUrl,
+  customNavigate,
+}?: AuthenticateWithMetamaskParams): Promise<void>;
+```
+
+
 
 ## Components
 
