docs: add additional methods on Clerk

--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -164,3 +164,46 @@ function authenticateWithMetamask({
     <ComponentPreviewCards title="Create Organization" image="/images/ui-components/component-org_create.svg" link="/reference-js/clerk/create-organization" cta="Read docs"/>
   </div>
 </div>
+
+
+## Additional Methods
+
+In addition to the methods listed above, the `Clerk` class also has the following methods:
+
+### Organization
+
+- [`getOrganization()`](/reference-js/clerk/organization-methods#getorganization)
+- [`createOrganization()`](/reference-js/clerk/organization-methods#createorganization)
+- [`getOrganizationMemberships()`](/reference-js/clerk/organization-methods#getorganizationmemberships)
+
+### Redirect
+
+- [`navigate()`](/reference-js/clerk/redirect-methods#navigate)
+- [`redirectWithAuth()`](/reference-js/clerk/redirect-methods#redirectwithauth)
+- [`redirectToSignIn()`](/reference-js/clerk/redirect-methods#redirecttosignin)
+- [`redirectToSignUp()`](/reference-js/clerk/redirect-methods#redirecttosignup)
+- [`redirectToUserProfile()`](/reference-js/clerk/redirect-methods#redirecttouserprofile)
+- [`redirectToCreateOrganization()`](/reference-js/clerk/redirect-methods#redirecttocreateorganization)
+- [`redirectToOrganizationProfile()`](/reference-js/clerk/redirect-methods#redirecttoorganizationprofile)
+- [`redirectToHome()`](/reference-js/clerk/redirect-methods#redirecttohome)
+
+### Build URLs
+
+- [`buildUrlWithAuth()`](/reference-js/clerk/build-urls#buildurlwithauth)
+- [`buildSignInUrl()`](/reference-js/clerk/build-urls#buildsigninurl)
+- [`buildSignUpUrl()`](/reference-js/clerk/build-urls#buildsignupurl)
+- [`buildUserProfileUrl()`](/reference-js/clerk/build-urls#builduserprofileurl)
+- [`buildHomeUrl()`](/reference-js/clerk/build-urls#buildhomeurl)
+- [`buildCreateOrganizationUrl()`](/reference-js/clerk/build-urls#buildcreateorganizationurl)
+- [`buildOrganizationProfileUrl()`](/reference-js/clerk/build-urls#buildorganizationprofileurl)
+
+### Handle Navigation
+
+- [`handleMagicLinkVerification()`](/reference-js/clerk/handle-navigation#handlemagiclinkverification)
+- [`handleRedirectCallback()`](/reference-js/clerk/handle-navigation#handleredirectcallback)
+- [`handleUnauthenticated()`](/reference-js/clerk/handle-navigation#handleunauthenticated)
+
+### Session
+
+- [`setSession()`](/reference-js/clerk/session-methods#setsession)
+- [`setActive()`](/reference-js/clerk/session-methods#setactive)
