docs: document the signout options

--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -122,15 +122,36 @@ Returns **true** when the [ClerkJS](https://clerk.com/docs/reference/clerk-react
 function load(options?: ClerkOptions): Promise<void>;
 ```
 
+Initializes the `Clerk` object and loads all necessary environment configuration and Instance settings from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference).
+
+It is absolutely necessary to call this method before using the `Clerk` object in your code. Refer to the [ClerkJS installation](https://clerk.com/docs/reference/clerkjs/installation) guide for more details.
+
 
 ### `signOut()`
 
 ```typescript
 function signOut(options?: SignOutOptions): Promise<void>;
 // OR
-function signOut(signOutCallback?: SignOutCallback, options?: SignOutOptions): Promise<void>;
+function signOut(signOutCallback?: (() => void | Promise<any>), options?: SignOutOptions): Promise<void>;
 ```
 
+Signs out the active user from all sessions in a [multi-session application](https://clerk.com/docs/authentication/multi-session-applications), or simply the current session in a single-session context. The current client will be deleted.
+
+#### `SignOutOptions`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>sessionId</code>,
+  <code>string | undefined</code>,
+  <>Specify a specific session to sign out. Useful for multi-session applications.</>,
+  ],
+  },
+  ]}
+/>
 
 ### `addListener()`
 
