docs: document addEventListener callback

--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -156,9 +156,31 @@ Signs out the active user from all sessions in a [multi-session application](htt
 ### `addListener()`
 
 ```typescript
-function addListener(listener: ListenerCallback): UnsubscribeCallback;
+function addListener(listener: ((emission: Resources) => void)): UnsubscribeCallback;
 ```
 
+Registers a listener that triggers a callback whenever a change in the `Client`, `Session`, or `User` object occurs. This method is primary used to build frontend SDKs like [@clerk/clerk-react](https://www.npmjs.com/package/@clerk/clerk-react).
+
+#### `Resources`
+
+
+<Tables
+  headings={["Name", "Type"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+  {cells: [<code>client</code>, <code><a href="/reference-js/client">Client</a></code>]},
+  {cells: [<code>session</code>, <code><a href="/reference-js/session">Session</a> | undefined | null</code>]},
+  {cells: [<code>user</code>, <code>User | undefined | null</code>]},
+  {cells: [<code>organization</code>, <code><a href="/reference-js/organization/organization">Organization</a> | undefined | null</code>]},
+  {cells: [<code>lastOrganizationInvitation</code>, <code><a href="/reference-js/organization-invitation">OrganizationInvitation</a> | undefined | null</code>]},
+  {cells: [<code>lastOrganizationMember</code>, <code><a href="/reference-js/organization-membership">OrganizationMembership</a> | undefined | null</code>]},
+  ]}
+/>
+
+> Please note that the `session` and `user` object have a special relationship that the type definition alone does not capture:
+> 
+> - When there is an active session, `user === session.user`. When there is no active session, `user`and `session` will both be **null**.
+> - When a session is loading, `user`and `session`will be **undefined**.
 
 ### `authenticateWithMetamask()`
 
@@ -170,7 +192,13 @@ function authenticateWithMetamask({
 }?: AuthenticateWithMetamaskParams): Promise<void>;
 ```
 
+#### Returns
 
+```typescript
+type UnsubscribeCallback = () => void;
+```
+
+The `addListener` method returns an `UnsubscribeCallback` function that can be used to remove the listener from the `Clerk` object.
 
 ## Components
 
