docs: document AuthenticateWithMetamaskParams

--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -182,6 +182,14 @@ Registers a listener that triggers a callback whenever a change in the `Client`,
 > - When there is an active session, `user === session.user`. When there is no active session, `user`and `session` will both be **null**.
 > - When a session is loading, `user`and `session`will be **undefined**.
 
+#### Returns
+
+```typescript
+type UnsubscribeCallback = () => void;
+```
+
+The `addListener` method returns an `UnsubscribeCallback` function that can be used to remove the listener from the `Clerk` object.
+
 ### `authenticateWithMetamask()`
 
 ```typescript
@@ -192,13 +200,35 @@ function authenticateWithMetamask({
 }?: AuthenticateWithMetamaskParams): Promise<void>;
 ```
 
-#### Returns
+#### `AuthenticateWithMetamaskParams`
 
-```typescript
-type UnsubscribeCallback = () => void;
-```
-
-The `addListener` method returns an `UnsubscribeCallback` function that can be used to remove the listener from the `Clerk` object.
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>redirectUrl</code>,
+  <code>string | undefined</code>,
+  <>Full URL or path to navigate after successful sign in or sign up.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>signUpContinueUrl</code>,
+  <code>string | undefined</code>,
+  <>The location to continue navigation to in the sign up process if data is missing.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>customNavigate</code>,
+  <code>({"(to: string) => Promise<unknown>"}) | undefined</code>,
+  <>Allows you to define a custom navigation function</>,
+  ],
+  },
+  ]}
+/>
 
 ## Components
 
