docs: finish documenting load method

--- a/src/pages/reference-js/clerk/clerk.mdx
+++ b/src/pages/reference-js/clerk/clerk.mdx
@@ -126,6 +126,121 @@ Initializes the `Clerk` object and loads all necessary environment configuration
 
 It is absolutely necessary to call this method before using the `Clerk` object in your code. Refer to the [ClerkJS installation](https://clerk.com/docs/reference/clerkjs/installation) guide for more details.
 
+#### `ClerkOptions`
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+  {
+  cells: [
+  <code>appearance</code>,
+  <code>Appearance | undefined</code>,
+  <>Optional object to style your Components. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>localization</code>,
+  <code>Localization | undefined</code>,
+  <>Optional object to localize your Components. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>navigate</code>,
+  <code>{"((to: string) => Promise<unknown> | unknown) | undefined"}</code>,
+  <>A function which takes the destination path as an argument and performs a "push" navigation.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>polling</code>,
+  <code>boolean | undefined</code>,
+  <>Dictates if we should poll against Clerk's backend every 5 minutes. Defaults to "true"</>,
+  ],
+  },
+  {
+  cells: [
+  <code>selectInitialSession</code>,
+  <code>((client: <a href="/reference-js/client">Client</a>) {"=>"} <a href="/reference-js/session">Session</a> | null) | undefined</code>,
+  <>An optional function which allows you to control which active session is the initial session to base a user's state off of. Defaults to the first session in the client's sessions array.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>standardBrowser</code>,
+  <code>boolean | undefined</code>,
+  <>Controls if ClerkJS will load with the standard browser setup using Clerk cookies. Defaults to "true"</>,
+  ],
+  },
+  {
+  cells: [
+  <code>supportEmail</code>,
+  <code>string | undefined</code>,
+  <>Optional support email for display in authentication screens</>,
+  ],
+  },
+  {
+  cells: [
+  <code>touchSession</code>,
+  <code>boolean | undefined</code>,
+  <>Indicates whether the session should be "touched" when user interactions occur, used to record these interactions. Defaults to "true"</>,
+  ],
+  },
+  {
+  cells: [
+  <code>signInUrl</code>,
+  <code>string | undefined</code>,
+  <>The default URL to use to direct to when the user signs in.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>signUpUrl</code>,
+  <code>string | undefined</code>,
+  <>The default URL to use to direct to when the user signs up.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>afterSignInUrl</code>,
+  <code>string | undefined</code>,
+  <>The default URL to use after the user signs in.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>afterSignUpUrl</code>,
+  <code>string | undefined</code>,
+  <>The default URL to use after the user signs up.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>allowedRedirectOrigins</code>,
+  <code>{"Array<string | RegExp> | undefined"}</code>,
+  <>Optional array of domains used to validate against the query param of an auth redirect.\n\nIf no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>isInterstitial</code>,
+  <code>boolean | undefined</code>,
+  <>Indicates that clerk.js is will be loaded from interstitial. Defaults to false</>,
+  ],
+  },
+  {
+  cells: [
+  <code>isSatellite</code>,
+  <code>boolean | {"((url: URL) => boolean)"} | undefined</code>,
+  <>Clerk Flag for satellite apps. Experimental.</>,
+  ],
+  },
+  ]}
+/>
+
 
 ### `signOut()`
 
