--- a/src/pages/reference-js/sign-in/sign-in.mdx
+++ b/src/pages/reference-js/sign-in/sign-in.mdx
@@ -56,6 +56,25 @@ Depending on the use-case and the `params` you pass to the `create` method, it c
 | ----------------------- | ------------------------------------------------------------ |
 | {"Promise<SignInResource>"} | This method returns a `Promise` which resolves with a `SignIn` object. Check the `status` attribute to see if the `SignIn` has been completed or a hint on what needs to happen next. |
 
+### `resetPassword()`
+
+```typescript
+function resetPassword(params: ResetPasswordParams): Promise<SignInResource>;
+```
+
+#### `ResetPasswordParams`
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>password</code>, <code>string</code>, <>The user's current password.</>]},
+    {cells: [<code>signOutOfOtherSessions</code>, <code>boolean | undefined</code>, <>If <strong><code>true</code></strong>, log the user out of all other authenticated sessions.</>]},
+  ]}
+/>
+
+
 ### `createMagicLinkFlow()`
 
 ```typescript
@@ -71,41 +90,3 @@ The second function can be used to stop polling at any time, allowing for full c
 | Type                                                         | Description                                                  |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | {"CreateMagicLinkFlowReturn<SignInStartMagicLinkFlowParams, SignInResource>"} | This method returns two functions. One to start the magic link flow and the other to cancel waiting for the results. |
-
-### `authenticateWithRedirect()`
-
-```
-authenticateWithRedirect(params: AuthenticateWithRedirectParams) => Promise<void>
-```
-
-Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where an external account is used for verifying the user's identity.
-
-**Parameters**
-
-| Type   | Description                                                  |
-| ------ | ------------------------------------------------------------ |
-| params | An object that specifies the verification strategy (one of the supported OAuth providers), the callback URL the OAuth provider should redirect to, as well as the URL that the user should be redirected to upon successful sign in. |
-
-**Returns**
-
-| Type          | Description                                                  |
-| ------------- | ------------------------------------------------------------ |
-| {"Promise<void>"} | This method returns a `Promise` which doesn't resolve to any value. |
-
-### `authenticateWithMetamask()`
-
-```
-authenticateWithMetamask() => Promise<SignInResource>
-```
-
-Starts a sign in flow that uses the Metamask browser extension to authenticate the user using their public wallet address.
-
-**Parameters**
-
-This methods does not accept any parameters.
-
-**Returns**
-
-| Type                    | Description                                                  |
-| ----------------------- | ------------------------------------------------------------ |
-| {"Promise<SignInResource>"} | This method returns a `Promise` which resolves to the current `SignInResource`. |
